--- a/main/static/css/base.css
+++ b/main/static/css/base.css
@@ -10,8 +10,8 @@ body{
     padding: 0;
     margin: 0;
     overflow-x: hidden;
-    background: linear-gradient(90deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
-    background-size: 400% 400%;
+    /* background: linear-gradient(90deg, #ee7752, #e73c7e, #23a6d5, #23d5ab); */
+    /* background-size: 400% 400%;
     animation: gradient 120s ease infinite;
 }
 
@@ -25,7 +25,7 @@ body{
     100% {
         background-position: 0% 50%;
     }
-}
+} */
 
 ul{
     list-style: none;
@@ -59,11 +59,6 @@ h5{
 
 .nav-a{
     margin-right: 20px;
-}
-
-.card-img{
-    width: 350px;
-    height: 350px;
 }
 
 .detail-image{
@@ -140,10 +135,31 @@ h5{
 }
 
 .home-card{
-    width: 360px;
-    height: 425px;
-    border: 5px solid #00000027;
+    width: 310px;
+    height: 445px;
+    border: 1px solid #00000027;
     border-radius: 5px;
     transition: all 0.5s ease;
     margin-left: 20px;
+}
+
+.home-card:hover{
+    border: 1px solid #000;
+}
+
+.title-card {
+    max-width: 185px;
+    margin-top: 20px;
+    min-height: 70px;
+}
+
+.card-img{
+    width: 300px;
+    height: 300px;
+}
+
+.price{
+    font-size: 20px;
+    font-weight: 700;
+    margin-top: -10px;
 }
