--- a/main/templates/main/base.html
+++ b/main/templates/main/base.html
@@ -17,10 +17,10 @@
             <navbar class="header-nav pt-4">
                 <ul class="header-list d-flex">
                     <li>
-                        <a href="/" class="nav-a m3">Home</a>
+                        <a href="/" class="button-home nav-a m3">Home</a>
                     </li>
-                    <li>
-                        <a href="/" class="nav-a m3">Shop</a>
+                    <li>    
+                        <a href="/" class="button-shop nav-a m3">Shop</a>
                     </li>
 
                 </ul>
