--- a/main/templates/main/index/index.html
+++ b/main/templates/main/index/index.html
@@ -20,16 +20,15 @@
                     <h5 class="title-card">{{ product.name }}</h5>
                     {% if product.discount %}
                         <div class="card-discount d-flex gap-2">
-                            <p class="line">Price: {{ product.price }}</p>
-                            <p>Discount price: {{ product.sell_price }}</p>
+                            <p class="line">$ {{ product.price }}</p>
+                            <p>$ {{ product.sell_price }}</p>
                         </div>
                     {% else %}
-                        <p class="price">Price: {{ product.price }}</p>
+                        <p class="price">{{ product.price }}</p>
                     {% endif %}
                 </a>
             {% endfor %}
         </div>
     </section>
-    <img src="{% static 'img/logo.png' %}" class="logokb" alt="">
     <img src="{% static 'img/logo.png' %}" class="subtitlekb" alt="">
 {% endblock content %}
